--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h1 class="headings">Also you can boost your accounts</h1>
           </div>
         </div>
+        <div class="account-section" id="account-section"></div>
       </div>
       <!-- <footer>
         <div class="footer">
