--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Virtual Accounts</title>
+    <script src="./JS/firebase.js" type="module" defer></script>
+    <script src="./JS/script.js" type="module" defer></script>
+
     <link rel="stylesheet" href="./styling/style.css" />
     <link rel="icon" type="image/x-icon" href="/Assets/final-logo.png" />
   </head>
@@ -37,6 +40,7 @@
         </div>
         <div class="account-section" id="account-section"></div>
       </div>
+
       <!-- <footer>
         <div class="footer">
           <div class="card1">
@@ -76,9 +80,7 @@
         </div>
       </footer> -->
     </div>
-  </body>  
-  <script src="./JS/script.js" type="module"></script>
-  <script src="./JS/firebase.js" type="module"></script>
+  </body>
   <script
     src="https://kit.fontawesome.com/a3e2233e19.js"
     crossorigin="anonymous"
