--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
           <i style="--clr: #fe5a59"></i>
           <div class="login">
             <div class="crossBtn">
+              <img width="50px" height="50px" src="./Assets/final-logo.png" alt="logo">
               <button id="cross-1" class="cross">
                 <j class="fa-solid fa-circle-xmark"></j>
               </button>
@@ -242,8 +243,9 @@
           <i style="--clr: #fffd44"></i>
           <div class="login">
             <div class="crossBtn">
+              <img width="50px" height="50px" src="./Assets/final-logo.png" alt="logo">
               <button id="cross-2" class="cross">
-                <j class="fa-solid fa-circle-xmark" style="color: #fe5a59"></j>
+                <j class="fa-solid fa-circle-xmark"></j>
               </button>
             </div>
             <h2>Sign Up</h2>
